--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
             color: #0056b3;
         }
 
+        /* Contact Info Styles */
+        .contact-info {
+            margin-bottom: 30px;
+        }
+
+        .contact-info p {
+            margin-bottom: 5px;
+            font-size: 1.125rem;
+        }
+
+        .contact-info p strong {
+            color: #0056b3;
+        }
+
         /* Profile Section */
         section p {
             margin-bottom: 0.5rem;
@@ -117,11 +131,18 @@
             <p class="text-muted">#OPEN_TO_WORK</p>
         </header>
 
+        <section class="contact-info text-center mb-4">
+            <p><strong>Telefon:</strong> 0760256712 (Mobil)</p>
+            <p><strong>Adress:</strong> Västra Götaland</p>
+            <p><strong>E-post:</strong> inayatnathani@gmail.com</p>
+        </section>
+
         <section class="mb-5">
             <h2 class="section-title">Profil</h2>
             <p><strong>Inayat Nathani</strong></p>
             <p>Software Developer</p>
-            <p>Sverige </p>
+            <p>Campus Mölndal</p>
+            <p>Sverige <span class="text-muted">Kontaktinfo</span></p>
             <p>Tillgänglig även via <a href="http://www.vuega.se" target="_blank">Vuega.se</a></p>
             <p><strong>Öppen för nya möjligheter:</strong> Roller som Projektledare och utvecklare, Full Stack Developer, Back-end Developer, Application Developer och Web Application Developer</p>
         </section>
@@ -197,21 +218,28 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">The hour of Code</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Code.org · Utfärdad okt. 2023</h6>
-                            <p class="card-text">Legitimerings-ID: inyat468</p>
+                            <h6 class="card-subtitle mb-2 text-muted">Issued by code.org</h6>
+                            <p class="card-text">jan. 2023 · No expiration date</p>
+                            <p><a href="#" target="_blank">Kursintyg</a></p>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section class="mb-5">
-            <h2 class="section-title">Kompetenser</h2>
-            <ul class="list-group">
-                <li class="list-group-item">Processförbättring</li>
-                <li class="list-group-item">Analytisk förmåga</li>
-                <li class="list-group-item">Datavetenskap</li>
-            </ul>
+            <div class="card mb-3">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="cloud_computing_cert.jpg" class="img-fluid rounded-start certificate-img" alt="Certificate in Cloud Computing">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Cloud Computing</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Issued by University of Technology</h6>
+                            <p class="card-text">dec. 2022 · No expiration date</p>
+                            <p><a href="#" target="_blank">Kursintyg</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="mb-5">
