--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         </header>
 
         <section class="contact-info text-center mb-4">
-            <p><strong>Telefon:</strong> 0760256712 (Mobil)</p>
+            <p><strong>Telefon:</strong> 0760256712</p>
             <p><strong>Adress:</strong> Västra Götaland</p>
-            <p><strong>E-post:</strong> inayatnathani@gmail.com</p>
+            <p><strong>E-post:</strong> inyat.nathani@gmail.com</p>
         </section>
 
         <section class="mb-5">
@@ -246,7 +246,7 @@
             <h2 class="section-title">Språk</h2>
             <ul class="list-group">
                 <li class="list-group-item">Engelska (Fullständig professionell nivå)</li>
-                <li class="list-group-item">Gujarati (Modersmåls- eller tvåspråkig nivå)</li>
+                <li class="list-group-item">Svenska (Fullständig professionell nivå)</li>
             </ul>
         </section>
 
